<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_TracePublish" Id="{59c4a8c0-7f67-4477-81e3-f706c1a9a878}">
    <Declaration><![CDATA[TYPE ST_TracePublish :
STRUCT
	iCnt	: INT;
	topic	: STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>